--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -4,7 +4,8 @@ phases:
   pre_build:
     commands:
       - echo "Assuming role into Pooja account..."
-      - CREDS=$(aws sts assume-role \
+      - |
+        CREDS=$(aws sts assume-role \
           --role-arn arn:aws:iam::992313771121:role/CrossAccountDeploymentRole \
           --role-session-name infra-deploy)
       - export AWS_ACCESS_KEY_ID=$(echo $CREDS | jq -r '.Credentials.AccessKeyId')
@@ -14,7 +15,8 @@ phases:
   build:
     commands:
       - echo "Deploying VPC to Pooja account"
-      - aws cloudformation deploy \
+      - |
+        aws cloudformation deploy \
           --template-file cloudformation/vpc.yaml \
           --stack-name SharedVPC \
           --capabilities CAPABILITY_NAMED_IAM
