--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -12,14 +12,20 @@ phases:
       - export AWS_SECRET_ACCESS_KEY=$(echo $CREDS | jq -r '.Credentials.SecretAccessKey')
       - export AWS_SESSION_TOKEN=$(echo $CREDS | jq -r '.Credentials.SessionToken')
 
-  build:
+   build:
     commands:
       - echo "Deploying VPC to Pooja account"
-      - |
-        aws cloudformation deploy \
+      - aws cloudformation deploy \
           --template-file cloudformation/vpc.yaml \
           --stack-name SharedVPC \
           --capabilities CAPABILITY_NAMED_IAM
+
+      - echo "Deploying ECS Cluster to Pooja account"
+      - aws cloudformation deploy \
+          --template-file cloudformation/ecs-cluster.yaml \
+          --stack-name ECSClusterStack \
+          --capabilities CAPABILITY_NAMED_IAM \
+          --parameter-overrides VpcId=$(aws cloudformation describe-stacks --stack-name SharedVPC --query "Stacks[0].Outputs[?OutputKey=='VpcId'].OutputValue" --output text)
 
 artifacts:
   files:
