--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -4,7 +4,8 @@ phases:
   pre_build:
     commands:
       - echo "Assuming role into Pooja account..."
-      - CREDS=$(aws sts assume-role \
+      - |
+        CREDS=$(aws sts assume-role \
           --role-arn arn:aws:iam::992313771121:role/CrossAccountDeploymentRole \
           --role-session-name infra-deploy)
       - export AWS_ACCESS_KEY_ID=$(echo $CREDS | jq -r '.Credentials.AccessKeyId')
@@ -20,9 +21,12 @@ phases:
           --capabilities CAPABILITY_NAMED_IAM
 
       - echo "Deploying ECS Cluster to Pooja account"
-      - VPC_ID=$(aws cloudformation describe-stacks --stack-name SharedVPC --query "Stacks[0].Outputs[?OutputKey=='VpcId'].OutputValue" --output text)
       - aws cloudformation deploy \
           --template-file cloudformation/ecs-cluster.yaml \
           --stack-name ECSClusterStack \
           --capabilities CAPABILITY_NAMED_IAM \
-          --parameter-overrides VpcId=$VPC_ID
+          --parameter-overrides VpcId=$(aws cloudformation describe-stacks --stack-name SharedVPC --query "Stacks[0].Outputs[?OutputKey=='VpcId'].OutputValue" --output text)
+
+artifacts:
+  files:
+    - '**/*'
