--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -8,20 +8,22 @@ phases:
         CREDS=$(aws sts assume-role \
           --role-arn arn:aws:iam::992313771121:role/CrossAccountDeploymentRole \
           --role-session-name infra-deploy)
-      - export AWS_ACCESS_KEY_ID=$(echo $CREDS | jq -r '.Credentials.AccessKeyId')
-      - export AWS_SECRET_ACCESS_KEY=$(echo $CREDS | jq -r '.Credentials.SecretAccessKey')
-      - export AWS_SESSION_TOKEN=$(echo $CREDS | jq -r '.Credentials.SessionToken')
+        export AWS_ACCESS_KEY_ID=$(echo $CREDS | jq -r '.Credentials.AccessKeyId')
+        export AWS_SECRET_ACCESS_KEY=$(echo $CREDS | jq -r '.Credentials.SecretAccessKey')
+        export AWS_SESSION_TOKEN=$(echo $CREDS | jq -r '.Credentials.SessionToken')
 
   build:
     commands:
       - echo "Deploying VPC to Pooja account"
-      - aws cloudformation deploy \
+      - |
+        aws cloudformation deploy \
           --template-file cloudformation/vpc.yaml \
           --stack-name SharedVPC \
           --capabilities CAPABILITY_NAMED_IAM
 
       - echo "Deploying ECS Cluster to Pooja account"
-      - aws cloudformation deploy \
+      - |
+        aws cloudformation deploy \
           --template-file cloudformation/ecs-cluster.yaml \
           --stack-name ECSClusterStack \
           --capabilities CAPABILITY_NAMED_IAM \
