--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -42,6 +42,21 @@ phases:
           --stack-name MicroservicesECRRepos \
           --capabilities CAPABILITY_NAMED_IAM \
           --parameter-overrides PullerAccountId=992313771121
+      - |
+        for SERVICE in user-service order-service payment-service; do
+          echo "Triggering build for $SERVICE"
+          aws codebuild start-build --project-name Build-$SERVICE > build.json
+          BUILD_ID=$(jq -r '.build.id' build.json)
+          
+          echo "Waiting for $SERVICE to finish..."
+          while true; do
+            STATUS=$(aws codebuild batch-get-builds --ids "$BUILD_ID" | jq -r '.builds[0].buildStatus')
+            echo "Status for $SERVICE: $STATUS"
+            if [[ "$STATUS" == "SUCCEEDED" ]]; then break; fi
+            if [[ "$STATUS" == "FAILED" || "$STATUS" == "FAULT" || "$STATUS" == "STOPPED" ]]; then echo "$SERVICE build failed!"; exit 1; fi
+            sleep 10
+          done
+        done
 
 artifacts:
   files:
