--- a/microservices/payment-service/buildspec.yml
+++ b/microservices/payment-service/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
-      - REPO_NAME=$(echo $CODEBUILD_INITIATOR | cut -d'/' -f2 | tr '[:upper:]' '[:lower:]')
+      - REPO_NAME=order-service
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
