--- a/cloudformation/user-service-deploy.yaml
+++ b/cloudformation/user-service-deploy.yaml
@@ -1,45 +1,81 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Deploy user-service ECS Service + ALB
+Description: Deploy user-service to ECS with ALB
 
 Parameters:
   ClusterName:
     Type: String
+    Description: Name of the ECS Cluster
+
   VpcId:
-    Type: String
+    Type: AWS::EC2::VPC::Id
+    Description: VPC ID where ECS is deployed
+
   Subnet1:
-    Type: String
+    Type: AWS::EC2::Subnet::Id
+    Description: Public Subnet 1
+
   Subnet2:
-    Type: String
+    Type: AWS::EC2::Subnet::Id
+    Description: Public Subnet 2
+
   ContainerImage:
     Type: String
+    Description: URI of the container image in ECR
 
 Resources:
-  TaskDefinition:
+  TaskExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+      RoleName: user-service-task-execution-role
+
+  UserServiceTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
       Family: user-service-task
-      Cpu: '256'
-      Memory: '512'
+      Cpu: "256"
+      Memory: "512"
       NetworkMode: awsvpc
       RequiresCompatibilities:
         - FARGATE
-      ExecutionRoleArn: arn:aws:iam::992313771121:role/ECSExecutionRole
-      TaskRoleArn: arn:aws:iam::992313771121:role/ECSTaskRole
+      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
       ContainerDefinitions:
         - Name: user-service
           Image: !Ref ContainerImage
           PortMappings:
             - ContainerPort: 5000
+              Protocol: tcp
 
-  ALB:
+  UserServiceSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Allow HTTP access to ECS service
+      VpcId: !Ref VpcId
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+
+  LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Name: user-service-alb
-      Scheme: internet-facing
       Subnets:
         - !Ref Subnet1
         - !Ref Subnet2
-      SecurityGroups: []
+      SecurityGroups:
+        - !Ref UserServiceSecurityGroup
+      Scheme: internet-facing
+      Type: application
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -50,21 +86,25 @@ Resources:
       VpcId: !Ref VpcId
       TargetType: ip
       HealthCheckPath: /
+      HealthCheckIntervalSeconds: 30
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
 
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
+      LoadBalancerArn: !Ref LoadBalancer
+      Port: 80
+      Protocol: HTTP
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref TargetGroup
-      LoadBalancerArn: !Ref ALB
-      Port: 80
-      Protocol: HTTP
 
-  ECSService:
+  UserService:
     Type: AWS::ECS::Service
     DependsOn: Listener
     Properties:
+      ServiceName: user-service
       Cluster: !Ref ClusterName
       LaunchType: FARGATE
       DesiredCount: 1
@@ -74,13 +114,15 @@ Resources:
           Subnets:
             - !Ref Subnet1
             - !Ref Subnet2
-      TaskDefinition: !Ref TaskDefinition
+          SecurityGroups:
+            - !Ref UserServiceSecurityGroup
+      TaskDefinition: !Ref UserServiceTaskDefinition
       LoadBalancers:
-        - ContainerName: user-service
+        - TargetGroupArn: !Ref TargetGroup
+          ContainerName: user-service
           ContainerPort: 5000
-          TargetGroupArn: !Ref TargetGroup
 
 Outputs:
-  ALBEndpoint:
-    Description: Public URL
-    Value: !GetAtt ALB.DNSName
+  LoadBalancerDNS:
+    Description: Public DNS of the user-service ALB
+    Value: !GetAtt LoadBalancer.DNSName
