--- a/cloudformation/payment-service-deploy.yaml
+++ b/cloudformation/payment-service-deploy.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Deploy user-service to ECS with ALB
+Description: Deploy payment-service to ECS with ALB
 
 Parameters:
   ClusterName:
@@ -35,12 +35,12 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
-      RoleName: user-service-task-execution-role
+      RoleName: payment-service-task-execution-role
 
-  UserServiceTaskDefinition:
+  PaymentServiceTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
-      Family: user-service-task
+      Family: payment-service-task
       Cpu: "256"
       Memory: "512"
       NetworkMode: awsvpc
@@ -48,13 +48,13 @@ Resources:
         - FARGATE
       ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
       ContainerDefinitions:
-        - Name: user-service
+        - Name: payment-service
           Image: !Ref ContainerImage
           PortMappings:
             - ContainerPort: 5000
               Protocol: tcp
 
-  UserServiceSecurityGroup:
+  PaymentServiceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow HTTP access to ECS service
@@ -68,19 +68,19 @@ Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: user-service-alb
+      Name: payment-service-alb
       Subnets:
         - !Ref Subnet1
         - !Ref Subnet2
       SecurityGroups:
-        - !Ref UserServiceSecurityGroup
+        - !Ref PaymentServiceSecurityGroup
       Scheme: internet-facing
       Type: application
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: user-service-tg
+      Name: payment-service-tg
       Port: 5000
       Protocol: HTTP
       VpcId: !Ref VpcId
@@ -100,11 +100,11 @@ Resources:
         - Type: forward
           TargetGroupArn: !Ref TargetGroup
 
-  UserService:
+  PaymentService:
     Type: AWS::ECS::Service
     DependsOn: Listener
     Properties:
-      ServiceName: user-service
+      ServiceName: payment-service
       Cluster: !Ref ClusterName
       LaunchType: FARGATE
       DesiredCount: 1
@@ -115,14 +115,14 @@ Resources:
             - !Ref Subnet1
             - !Ref Subnet2
           SecurityGroups:
-            - !Ref UserServiceSecurityGroup
-      TaskDefinition: !Ref UserServiceTaskDefinition
+            - !Ref PaymentServiceSecurityGroup
+      TaskDefinition: !Ref PaymentServiceTaskDefinition
       LoadBalancers:
         - TargetGroupArn: !Ref TargetGroup
-          ContainerName: user-service
+          ContainerName: payment-service
           ContainerPort: 5000
 
 Outputs:
   LoadBalancerDNS:
-    Description: Public DNS of the user-service ALB
+    Description: Public DNS of the payment-service ALB
     Value: !GetAtt LoadBalancer.DNSName
