--- a/buildspec.deploy.yml
+++ b/buildspec.deploy.yml
@@ -9,7 +9,6 @@ phases:
       - apt-get update -y
       - apt-get install -y jq unzip curl
 
-      # Install AWS CLI v2
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       - unzip -q awscliv2.zip
       - ./aws/install
@@ -21,13 +20,13 @@ phases:
       - echo "Assuming role into Pooja account..."
       - CREDS=$(aws sts assume-role \
           --role-arn arn:aws:iam::992313771121:role/CrossAccountDeploymentRole \
-          --role-session-name deploy-${SERVICE_NAME})
+          --role-session-name deploy-$CODEBUILD_RESOLVED_SOURCE_VERSION)
 
       - export AWS_ACCESS_KEY_ID=$(echo $CREDS | jq -r '.Credentials.AccessKeyId')
       - export AWS_SECRET_ACCESS_KEY=$(echo $CREDS | jq -r '.Credentials.SecretAccessKey')
       - export AWS_SESSION_TOKEN=$(echo $CREDS | jq -r '.Credentials.SessionToken')
 
-      - echo "Fetching dynamic outputs from CloudFormation stack..."
+      - echo "Fetching CloudFormation Outputs..."
       - VPC_ID=$(aws cloudformation describe-stacks \
           --stack-name SharedVPC \
           --query "Stacks[0].Outputs[?OutputKey=='VpcId'].OutputValue" \
@@ -48,15 +47,19 @@ phases:
           --query "Stacks[0].Outputs[?OutputKey=='ClusterName'].OutputValue" \
           --output text)
 
-      - echo "Constructing ECR image URI for $SERVICE_NAME"
-      - IMAGE_URI=044854092841.dkr.ecr.us-east-1.amazonaws.com/${SERVICE_NAME}:$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      # Read service name from pipeline variables
+      - echo "Getting service name from environment variable"
+      - SERVICE_NAME=$(echo $SERVICE)
+
+      - echo "ECR URI"
+      - IMAGE_URI=044854092841.dkr.ecr.us-east-1.amazonaws.com/$SERVICE_NAME:$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
 
   build:
     commands:
-      - echo "Deploying $SERVICE_NAME ECS service with dynamic parameters..."
+      - echo "Deploying $SERVICE_NAME using CloudFormation"
       - aws cloudformation deploy \
-          --template-file cloudformation/${SERVICE_NAME}-deploy.yaml \
-          --stack-name ${SERVICE_NAME^}ServiceECSStack \
+          --template-file cloudformation/$SERVICE_NAME-deploy.yaml \
+          --stack-name ${SERVICE_NAME^}ECSStack \
           --capabilities CAPABILITY_NAMED_IAM \
           --parameter-overrides \
               ClusterName=$CLUSTER_NAME \
