--- a/buildspec.deploy.yml
+++ b/buildspec.deploy.yml
@@ -2,18 +2,18 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      docker: 20
-    commands:
-      - echo "Installing dependencies..."
-      - apt-get update -y
-      - apt-get install -y jq unzip curl
+  commands:
+    - echo "Installing dependencies..."
+    - apt-get update -y
+    - apt-get install -y jq unzip curl
 
-      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip -q awscliv2.zip
-      - ./aws/install
-      - export PATH=$PATH:/usr/local/bin
-      - aws --version
+    # Install AWS CLI v2
+    - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+    - unzip -q awscliv2.zip
+    - ./aws/install
+    - export PATH=$PATH:/usr/local/bin
+    - aws --version
+
 
   pre_build:
     commands:
