--- a/buildspec.deploy.yml
+++ b/buildspec.deploy.yml
@@ -10,7 +10,7 @@ phases:
       # Install AWS CLI v2
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       - unzip -q awscliv2.zip
-      - ./aws/install
+      - ./aws/install --update
       - export PATH=$PATH:/usr/local/bin
       - aws --version
 
